contrast fixes

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -24,7 +24,7 @@ header h1{
 }
 nav {
 	background-color: var(--scolor);
-    
+    border-radius: 15px;    
 }
 
 nav ul {
@@ -36,18 +36,18 @@ nav ul {
 
 nav a {
 	display: block;
-	color: var(--acolor2);
+	color: var(--acolor);
 	text-align: center;
 	padding: 1rem;
 	text-decoration: none;
-	font-size: larger;
-    
+	font-size: larger;    
 }
 
 nav a:hover {
 	text-decoration: underline;
 	background-color: var(--acolor2);
 	color: var(--acolor);
+    border-radius: 15px;
 }
 #hamburger{
     display: inline;
